# mate-settings-daemon

./: .build.yml  .travis.yml  AUTHORS  CNAME  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  makepot  mate-settings-daemon.pot
data/: 50-accessibility.xml.in  Makefile.am  apps_mate_settings_daemon_xrandr.schemas.in  mate-settings-daemon-uninstalled.pc.in  mate-settings-daemon.1  mate-settings-daemon.convert  mate-settings-daemon.desktop.in.in  mate-settings-daemon.pc.in  msd-datetime-mechanism.1  msd-locate-pointer.1  org.mate.SettingsDaemon.plugins.a11y-keyboard.gschema.xml.in  org.mate.SettingsDaemon.plugins.a11y-keyboard.gschema.xml.in.in  org.mate.SettingsDaemon.plugins.a11y-settings.gschema.xml.in  org.mate.SettingsDaemon.plugins.a11y-settings.gschema.xml.in.in  org.mate.SettingsDaemon.plugins.background.gschema.xml.in  org.mate.SettingsDaemon.plugins.clipboard.gschema.xml.in  org.mate.SettingsDaemon.plugins.datetime.gschema.xml.in  org.mate.SettingsDaemon.plugins.font.gschema.xml.in  org.mate.SettingsDaemon.plugins.gschema.xml.in  org.mate.SettingsDaemon.plugins.housekeeping.gschema.xml.in  org.mate.SettingsDaemon.plugins.housekeeping.gschema.xml.in.in  org.mate.SettingsDaemon.plugins.keybindings.gschema.xml.in  org.mate.SettingsDaemon.plugins.keybindings.gschema.xml.in.in  org.mate.SettingsDaemon.plugins.keyboard.gschema.xml.in  org.mate.SettingsDaemon.plugins.media-keys.gschema.xml.in  org.mate.SettingsDaemon.plugins.media-keys.gschema.xml.in.in  org.mate.SettingsDaemon.plugins.mouse.gschema.xml.in  org.mate.SettingsDaemon.plugins.mpris.gschema.xml.in  org.mate.SettingsDaemon.plugins.rfkill.gschema.xml.in  org.mate.SettingsDaemon.plugins.smartcard.gschema.xml.in  org.mate.SettingsDaemon.plugins.smartcard.gschema.xml.in.in  org.mate.SettingsDaemon.plugins.sound.gschema.xml.in  org.mate.SettingsDaemon.plugins.sound.gschema.xml.in.in  org.mate.SettingsDaemon.plugins.typing-break.gschema.xml.in  org.mate.SettingsDaemon.plugins.typing-break.gschema.xml.in.in  org.mate.SettingsDaemon.plugins.xrandr.gschema.xml.in  org.mate.SettingsDaemon.plugins.xrandr.gschema.xml.in.in  org.mate.SettingsDaemon.plugins.xrdb.gschema.xml.in  org.mate.SettingsDaemon.plugins.xsettings.gschema.xml.in  org.mate.SettingsDaemon.plugins.xsettings.gschema.xml.in.in  (+11 more)
plugins/: Makefile.am
plugins/a11y-keyboard/: Makefile.am  a11y-keyboard.mate-settings-plugin.desktop.in  gsd-a11y-keyboard-manager.c  gsd-a11y-preferences-dialog.c  msd-a11y-keyboard-atspi.c  msd-a11y-keyboard-atspi.h  msd-a11y-keyboard-manager.c  msd-a11y-keyboard-manager.h  msd-a11y-keyboard-plugin.c  msd-a11y-keyboard-plugin.h  msd-a11y-preferences-dialog.c  msd-a11y-preferences-dialog.h  msd-a11y-preferences-dialog.ui  test-a11y-preferences-dialog.c
plugins/a11y-settings/: Makefile.am  a11y-settings.mate-settings-plugin.desktop.in  a11y-settings.mate-settings-plugin.in  msd-a11y-settings-manager.c  msd-a11y-settings-manager.h  msd-a11y-settings-plugin.c  msd-a11y-settings-plugin.h
plugins/background/: Makefile.am  background.mate-settings-plugin.desktop.in  gsd-background-manager.c  gsd-background-plugin.h  msd-background-manager.c  msd-background-manager.h  msd-background-plugin.c  msd-background-plugin.h  test-background.c
plugins/clipboard/: Makefile.am  clipboard.mate-settings-plugin.desktop.in  gsd-clipboard-plugin.c  list.c  list.h  msd-clipboard-manager.c  msd-clipboard-manager.h  msd-clipboard-plugin.c  msd-clipboard-plugin.h  xutils.c  xutils.h
plugins/common/: Makefile.am  eggaccelerators.c  eggaccelerators.h  gsd-keygrab.c  msd-input-helper.c  msd-input-helper.h  msd-keygrab.c  msd-keygrab.h  msd-osd-window.c  msd-osd-window.h
plugins/datetime/: Makefile.am  gsd-datetime-mechanism.h  msd-datetime-mechanism-main.c  msd-datetime-mechanism.c  msd-datetime-mechanism.h  msd-datetime-mechanism.xml  org.mate.SettingsDaemon.DateTimeMechanism.conf  org.mate.SettingsDaemon.DateTimeMechanism.service.in  org.mate.settingsdaemon.datetimemechanism.policy.in  system-timezone.c  system-timezone.h
plugins/dummy/: Makefile.am  dummy.mate-settings-plugin.desktop.in  gsd-dummy-manager.c  gsd-dummy-manager.h  gsd-dummy-plugin.c  msd-dummy-manager.c  msd-dummy-manager.h  msd-dummy-plugin.c  msd-dummy-plugin.h
plugins/font/: Makefile.am  delayed-dialog.c  delayed-dialog.h  gsd-font-manager.c  gsd-font-plugin.h  msd-font-manager.c  msd-font-manager.h  msd-font-plugin.c  msd-font-plugin.h
plugins/housekeeping/: Makefile.am  gsd-disk-space.c  gsd-disk-space.h  gsd-housekeeping-plugin.h  gsd-ldsm-trash-empty.c  gsd-ldsm-trash-empty.h  housekeeping.mate-settings-plugin.desktop.in  msd-disk-space.c  msd-disk-space.h  msd-housekeeping-manager.c  msd-housekeeping-manager.h  msd-housekeeping-plugin.c  msd-housekeeping-plugin.h  msd-ldsm-dialog.c  msd-ldsm-dialog.h  msd-ldsm-trash-empty.c  msd-ldsm-trash-empty.h
plugins/keybindings/: Makefile.am  gsd-keybindings-plugin.c  keybindings.mate-settings-plugin.desktop.in  msd-keybindings-manager.c  msd-keybindings-manager.h  msd-keybindings-plugin.c  msd-keybindings-plugin.h
plugins/keyboard/: Makefile.am  delayed-dialog.c  delayed-dialog.h  gsd-keyboard-manager.c  gsd-keyboard-xkb.c  gsd-keyboard-xkb.h  gsd-xmodmap.c  gsd-xmodmap.h  keyboard.mate-settings-plugin.desktop.in  modmap-dialog.ui  msd-keyboard-manager.c  msd-keyboard-manager.h  msd-keyboard-plugin.c  msd-keyboard-plugin.h  msd-keyboard-xkb.c  msd-keyboard-xkb.h  msd-xmodmap.c  msd-xmodmap.h
plugins/media-keys/: Makefile.am  acme.h  acme.ui  gsd-media-keys-manager.c  media-keys.mate-settings-plugin.desktop.in  msd-media-keys-manager.c  msd-media-keys-manager.h  msd-media-keys-manager.xml  msd-media-keys-plugin.c  msd-media-keys-plugin.h  msd-media-keys-window.c  msd-media-keys-window.h  test-media-keys.c  test-media-window.c
plugins/mouse/: Makefile.am  gsd-locate-pointer.c  gsd-locate-pointer.h  gsd-mouse-manager.c  gsd-mouse-manager.h  gsd-timeline.c  gsd-timeline.h  mouse.mate-settings-plugin.desktop.in  msd-locate-pointer.c  msd-locate-pointer.h  msd-mouse-manager.c  msd-mouse-manager.h  (+4 more)
(+1540 files in other folders)
